--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,1 +1,33 @@
-<p>signin works!</p>
+<form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+    <div class="row">
+      <div class="col col-first">
+        <fieldset>
+          <div class="inline-block col-1-1">
+            <div class="field">
+              <app-input
+                [label]="'Username'"
+                [id]="'username'"
+                [control]="signinForm.controls.username"
+                [field]="formConfig.usernameConfig"
+              ></app-input>
+            </div>
+          </div>
+          <div class="inline-block col-1-1">
+            <div class="field">
+              <app-input
+                [label]="'Password'"
+                [id]="'password'"
+                [control]="signinForm.controls.password"
+                [field]="formConfig.passwordConfig"
+              ></app-input>
+            </div>
+          </div>
+  
+         
+        </fieldset>
+      </div>
+    </div>
+    <button mat-button color="primary" type="submit" >Signin</button>
+  </form>
+  
+  
