--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
+<app-header>
 
 
+</app-header>
 
-  <app-header></app-header> 
+<div id="displayable_content" class="loaded">
 
-<div id="displayable_content" class="loaded" >
+    <router-outlet></router-outlet>
 
-  <router-outlet></router-outlet>
- 
 </div>
-
