--- a/src/app/inbox/email-index/email-index.component.html
+++ b/src/app/inbox/email-index/email-index.component.html
@@ -1,3 +1,4 @@
+<app-email-create></app-email-create>
 <mat-list>
     <mat-list-item *ngFor="let email of emails;let i=index">
         <a [routerLink]="email.id" routerLinkActive="bg" #rla="routerLinkActive">
