--- a/src/app/shared/modals/dialog/dialog.component.html
+++ b/src/app/shared/modals/dialog/dialog.component.html
@@ -1,3 +1,4 @@
+<ng-template [cdkPortalOutlet]="portal"></ng-template>
 <h1 mat-dialog-title>Hi {{data.name}}</h1>
 <div mat-dialog-content>
     <p>What's your favorite animal?</p>
