--- a/src/app/inbox/email-create/email-create.component.html
+++ b/src/app/inbox/email-create/email-create.component.html
@@ -1,1 +1,2 @@
-<p>email-create works!</p>
+<button mat-raised-button (click)="openDialog()">Pick one</button>
+<!-- Dynamically load a component inside a Material MatDialog -->
