--- a/src/app/shared/modals/dialog/dialog.component.html
+++ b/src/app/shared/modals/dialog/dialog.component.html
@@ -1,11 +1,9 @@
-<ng-template [cdkPortalOutlet]="portal"></ng-template>
+<!-- <ng-template [cdkPortalOutlet]="portal"></ng-template> -->
+<ng-container *ngComponentOutlet="data.component"></ng-container>
 <h1 mat-dialog-title>Hi {{data.name}}</h1>
 <div mat-dialog-content>
     <p>What's your favorite animal?</p>
-    <mat-form-field>
-        <mat-label>Favorite Animal</mat-label>
-        <input>
-    </mat-form-field>
+   <input type="text">
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
