--- a/src/app/inbox/email-create/email-create.component.html
+++ b/src/app/inbox/email-create/email-create.component.html
@@ -1,2 +1,2 @@
-<button mat-raised-button (click)="openDialog()">Pick one</button>
+<button mat-raised-button (click)="openDialog()">Compose</button>
 <!-- Dynamically load a component inside a Material MatDialog -->
