--- a/src/app/inbox/email-index/email-index.component.html
+++ b/src/app/inbox/email-index/email-index.component.html
@@ -1,27 +1,30 @@
-<app-email-create></app-email-create>
-<mat-list>
-    <mat-list-item *ngFor="let email of emails;let i=index">
-        <a [routerLink]="email.id" routerLinkActive="bg" #rla="routerLinkActive">
+<div fxLayout="column">
+    <app-email-create class="create"></app-email-create>
 
-            <mat-card class="example-card">
-                <mat-card-header>
-                    <div mat-card-avatar class="example-header-image">
-                        <mat-icon *ngIf="rla.isActive">send</mat-icon>
-                    </div>
+    <mat-list>
+        <mat-list-item *ngFor="let email of emails;let i=index">
+            <a [routerLink]="email.id" routerLinkActive="bg" #rla="routerLinkActive">
 
-                    <mat-card-title>{{email.from}}</mat-card-title>
+                <mat-card class="example-card">
+                    <mat-card-header>
+                        <div mat-card-avatar class="example-header-image">
+                            <mat-icon *ngIf="rla.isActive">send</mat-icon>
+                        </div>
 
-                </mat-card-header>
+                        <mat-card-title>{{email.from}}</mat-card-title>
 
-                <mat-card-content>
-                    <p>
-                        {{email.subject}}
-                    </p>
-                </mat-card-content>
-            </mat-card>
-        </a>
+                    </mat-card-header>
 
-    </mat-list-item>
+                    <mat-card-content>
+                        <p>
+                            {{email.subject}}
+                        </p>
+                    </mat-card-content>
+                </mat-card>
+            </a>
+
+        </mat-list-item>
 
 
-</mat-list>
+    </mat-list>
+</div>
