--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -2,7 +2,7 @@
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>{{email.from}}</mat-card-title>
-
+        <app-email-reply [email]=email></app-email-reply>
     </mat-card-header>
 
     <mat-card-content>
