--- a/src/app/inbox/home/home.component.html
+++ b/src/app/inbox/home/home.component.html
@@ -1,5 +1,5 @@
-<div fxLayout fxLayout.xs="column" fxLayout.sm="column" fxLayout.md="column">
-    <app-email-index fxFlex="30%"></app-email-index>
+<div fxLayout="row " fxLayoutGap="32px" fxLayoutAlign="flex-start" fxLayout.xs="column" fxLayout.sm="column" fxLayout.md="column">
+    <app-email-index fxFlex="30%" fxLayout="column"></app-email-index>
 
     <div fxFlex="70%" class="mt">
         <router-outlet></router-outlet>
