--- a/src/app/shared/modals/dialog/dialog.component.html
+++ b/src/app/shared/modals/dialog/dialog.component.html
@@ -1,10 +1,10 @@
 <!-- <ng-template [cdkPortalOutlet]="portal"></ng-template> -->
 
 <h1 mat-dialog-title>Hi {{data.name}}</h1>
-<div mat-dialog-content>
-    <ng-container *ngComponentOutlet="data.component"></ng-container>
-</div>
-<div mat-dialog-actions>
+
+<ng-container *ngComponentOutlet="data.component"></ng-container>
+
+<!-- <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
-    <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
-</div>
+     <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button> 
+</div> -->
